# ovos-cookiecutter-template-skill

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: README.md  TODO.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: pull-request-lint.yml  release-build.yml  unit-tests.yml
{{cookiecutter.repo_name}}/.github/workflows/scripts/: update_skill_json.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name.split('-')|join('_')}}/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name.split('-')|join('_')}}/locale/en-us/: skill.json
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name.split('-')|join('_')}}/locale/en-us/dialog/: hello_world.dialog
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name.split('-')|join('_')}}/locale/en-us/intents/: HowAreYou.intent
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name.split('-')|join('_')}}/locale/en-us/regex/: Law.rx
